Fix logo overflow (again)
Related to 4942227, the logo was being cut off in firefox because of
the `overflow: hidden` property on `header`. Now, instead of making the
logo text full size, the font-size is 0 and an explicit size is used.
Nothing is overflowing, so I can remove that property

--- a/app/assets/stylesheets/_logo.scss
+++ b/app/assets/stylesheets/_logo.scss
@@ -1,6 +1,6 @@
 $buffer: 20%;
 $diameter: 100% + ($buffer * 2);
-$logo-font-size: 180px;
+$logo-size: 180px;
 $planet-size: 6px;
 $rotation-period: 10s;
 
@@ -9,9 +9,8 @@ header, div.orbit {
 }
 
 header {
-  height: golden-ratio($logo-font-size, 1);
+  height: golden-ratio($logo-size, 1);
   margin: $base-spacing * 2 auto golden-ratio($base-spacing, 1);
-  overflow: hidden;
   padding-top: $base-spacing * 1.1;
   position: relative;
   text-align: center;
@@ -30,9 +29,9 @@ h1 {
   background: transparent url(image-path('el_logo_text.svg')) no-repeat center;
   color: transparent;
   display: inline-block;
-  font-size: $logo-font-size;
-  height: 1em;
-  width: 1em;
+  font-size: 0;
+  height: $logo-size;
+  width: $logo-size;
 }
 
 div.orbit {
